--- a/express-server/package.json
+++ b/express-server/package.json
@@ -4,12 +4,26 @@
   "description": "jihwan-try",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mikro-orm/core": "^6.5.1",
+    "@mikro-orm/postgresql": "^6.5.1",
+    "@mikro-orm/reflection": "^6.5.1",
+    "@mikro-orm/sqlite": "^6.5.1",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "fastify": "^5.5.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
+    "typeorm": "^0.3.26"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0"
   }
 }
