--- a/express-server/.sequelizerc
+++ b/express-server/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'config.json'),
-  'models-path': path.resolve('db','models'),
-  'seeders-path': path.resolve('db','seeders'),
-  'migrations-path': path.resolve('db','migrations')
+  'config': path.resolve(__dirname, 'libs', 'config', 'config.json'),
+  'models-path': path.resolve(__dirname, 'libs', 'db', 'models'),
+  'seeders-path': path.resolve(__dirname, 'libs', 'db', 'seeders'),
+  'migrations-path': path.resolve(__dirname, 'libs', 'db', 'migrations')
 };
