--- a/express-server/package.json
+++ b/express-server/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-redis": "^7.1.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
