--- a/express-server/package.json
+++ b/express-server/package.json
@@ -22,6 +22,9 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "pino": "^9.9.5",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
