--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "ioredis": "^5.7.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
@@ -25,7 +26,8 @@
     "pino": "^9.9.5",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.1",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.3"
