--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "api-docs": "swagger-cli bundle ./swagger/index.yaml --outfile swagger.yaml --type yaml",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -27,6 +28,7 @@
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.1",
     "sequelize": "^6.37.7",
+    "swagger-cli": "^4.0.4",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
