--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^5.7.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
