[#42] dotenv 활용해서 .env 녹이기

--- a/expense-tracker/.eslintrc.json
+++ b/expense-tracker/.eslintrc.json
@@ -14,6 +14,11 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "import/no-extraneous-dependencies": ["error", {
+            "devDependencies": [
+                "server.js" 
+            ]
+        }]
     }
 }
