[#51] challenge, challengechecklist 구현

--- a/expense-tracker/.sequelizerc
+++ b/expense-tracker/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve(__dirname, 'src', 'libs', 'config', 'config.json'),
+  'config': path.resolve(__dirname, 'src', 'libs', 'config', 'config.js'),
   'models-path': path.resolve(__dirname, 'src', 'libs', 'db', 'models'),
   'seeders-path': path.resolve(__dirname, 'src', 'libs', 'db', 'seeders'),
   'migrations-path': path.resolve(__dirname, 'src', 'libs', 'db', 'migrations')
