--- a/expense-tracker/swagger/components/parameter.yaml
+++ b/expense-tracker/swagger/components/parameter.yaml
@@ -1,4 +1,20 @@
 parameters:
+  Page:
+    name: page
+    in: query
+    required: false
+    description: "페이지 번호"
+    schema:
+      type: integer
+      default: 1
+  Limit:
+    name: limit
+    in: query
+    required: false
+    description: "페이지 당 항목 수"
+    schema:
+      type: integer
+      default: 10
   Year:
     name: year
     in: query
