--- a/expense-tracker/swagger/paths/challenges/challenge.yaml
+++ b/expense-tracker/swagger/paths/challenges/challenge.yaml
@@ -3,12 +3,35 @@ get:
   summary: 전체 도전과제 목록 조회
   security:
     - cookieAuth: []
+  parameters:
+    - $ref: '../../components/parameter.yaml#/parameters/Page'
+    - $ref: '../../components/parameter.yaml#/parameters/Limit'
   responses:
     '200':
       description: 조회 성공
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '../../components/schema.yaml#/schemas/Challenge'
+            $ref: '../../components/schema.yaml#/schemas/GetChallengeChecklistsResponse'
+
+post:
+  tags: [Challenges]
+  summary: 새로운 도전과제 생성 (관리자 전용)
+  description: 관리자만 새로운 도전과제를 생성할 수 있습니다.
+  security:
+    - cookieAuth: []
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: '../../components/schema.yaml#/schemas/CreateChallengeRequest'
+  responses:
+    '201':
+      description: 생성 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/Challenge'
+    '403':
+      description: 권한 없음
