[#60] Response 실제 코드와 맞춰주기

--- a/expense-tracker/swagger/paths/challenge-checklists/checklist-by-id.yaml
+++ b/expense-tracker/swagger/paths/challenge-checklists/checklist-by-id.yaml
@@ -18,6 +18,22 @@ get:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/ChallengeChecklist'
+          example:
+            challengeChecklistId: 1
+            userId: 1
+            challengeId: 1
+            status: "PENDING"
+            userStartDate: "2025-11-10T00:00:00Z"
+            userExpireDate: "2025-11-17T23:59:59Z"
+            completeDate: null
+            challenge:
+              challengeId: 1
+              title: "일주일 지출 10회 미만"
+              description: "일주일 동안 지출 횟수를 10회 미만으로 유지하여 절약 습관을 길러보세요."
+              rewardXp: 100
+              challengeStartDate: "2025-11-10"
+              challengeExpireDate: "2025-11-17"
+              limitDay: 7
     '403':
       description: 접근 권한 없음
     '404':
