--- a/expense-tracker/swagger/paths/challenge-checklists/checklists.yaml
+++ b/expense-tracker/swagger/paths/challenge-checklists/checklists.yaml
@@ -19,6 +19,24 @@ get:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/GetChallengeChecklistsResponse'
+          example:
+            checklists:
+              - challengeChecklistId: 1
+                userId: 1
+                challengeId: 1
+                status: "PENDING"
+                userStartDate: "2025-11-10T00:00:00Z"
+                userExpireDate: "2025-11-17T23:59:59Z"
+                completeDate: null
+                challenge:
+                  challengeId: 1
+                  title: "일주일 지출 10회 미만"
+                  description: "일주일 동안 지출 횟수를 10회 미만으로 유지하여 절약 습관을 길러보세요."
+                  rewardXp: 100
+                  challengeStartDate: "2025-11-10"
+                  challengeExpireDate: "2025-11-17"
+                  limitDay: 7
+            totalItems: 1
 
 post:
   tags: [ChallengeChecklists]
@@ -39,3 +57,19 @@ post:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/ChallengeChecklist'
+          example:
+            challengeChecklistId: 2
+            userId: 1
+            challengeId: 2
+            status: "PENDING"
+            userStartDate: "2025-11-07T10:00:00Z"
+            userExpireDate: "2025-11-14T23:59:59Z"
+            completeDate: null
+            challenge:
+              challengeId: 2
+              title: "한달 수입 50만원 이상 달성"
+              description: "부수입, 월급 외 추가 수입으로 50만원 이상을 벌어보세요."
+              rewardXp: 200
+              challengeStartDate: "2025-11-01"
+              challengeExpireDate: "2025-11-30"
+              limitDay: 30
