--- a/expense-tracker/swagger/paths/users/me.yaml
+++ b/expense-tracker/swagger/paths/users/me.yaml
@@ -10,6 +10,14 @@ get:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/UserProfile'
+          example:
+            nickname: "current_user"
+            contactEmail: "current@example.com"
+            profileImageUrl: null
+            gender: "male"
+            birthday: "1992-12-25"
+            level: 8
+            exp: 1200
     '401':
       description: 인증 실패
 
