--- a/expense-tracker/swagger/paths/users/user-by-id.yaml
+++ b/expense-tracker/swagger/paths/users/user-by-id.yaml
@@ -13,6 +13,15 @@ get:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/User'
+          example:
+            nickname: "test_user_1"
+            contactEmail: "user1@example.com"
+            profileImageUrl: null
+            gender: "female"
+            birthday: "1995-05-10"
+            level: 5
+            exp: 750
+            role: "user"
     '403':
       description: 접근 권한 없음
     '404':
@@ -38,6 +47,13 @@ patch:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/User'
+          example:
+            nickname: "new_nickname"
+            contactEmail: "user1@example.com"
+            profileImageUrl: null
+            gender: "female"
+            birthday: "1995-05-11"
+            role: "user"
     '403':
       description: 접근 권한 없음
     '404':
@@ -52,8 +68,17 @@ delete:
   parameters:
     - $ref: '../../components/parameter.yaml#/parameters/UserId'
   responses:
-    '204':
+    '200':
       description: 삭제 성공
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+          example:
+            message: "성공적으로 삭제되었습니다."
     '403':
       description: 접근 권한 없음
     '404':
