--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.63.1",
     "connect-redis": "^7.1.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
