--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.1",
     "connect-redis": "^7.1.1",
