--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.1",
     "connect-redis": "^7.1.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
