--- a/expense-tracker/.eslintrc.json
+++ b/expense-tracker/.eslintrc.json
@@ -15,7 +15,9 @@
     },
     "rules": {
         "no-underscore-dangle": "off",
-        "import/no-extraneous-dependencies": ["error", {
+        "no-await-in-loop": "off",
+        "no-restricted-syntax": "off",
+        "import/no-extraneous-dependencies": ["error", {        
             "devDependencies": [
                 "server.js" 
             ]
