--- a/nest-seed/tsconfig.json
+++ b/nest-seed/tsconfig.json
@@ -20,11 +20,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
+    "noFallthroughCasesInSwitch": false
   }
 }
