--- a/nest-seed/.sequelizerc
+++ b/nest-seed/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve(__dirname, 'src', 'config', 'config.ts'),
+  'config': path.resolve(__dirname, 'src', 'config', 'migrationConfig.js'),
 
   'models-path': path.resolve(__dirname, 'src', 'common', 'db', 'models'),
   'seeders-path': path.resolve(__dirname, 'src', 'common', 'db', 'seeders'),
