--- a/expense-tracker/.env
+++ b/expense-tracker/.env
@@ -1,20 +1,24 @@
-DB_USERNAME=user
-DB_PASSWORD=password
-DB_DATABASE=mydb
-DB_HOST=localhost
-DB_DIALECT=postgres
-DB_PORT=5432 
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_DIALECT=
+DB_PORT=
 
-JWT_SECRET_KEY="jihwanproject" 
-BCRYPT_SALT_ROUNDS=10
-SESSION_NAME = "sssssssssid"
-SESSION_SECRET="jihwanseesion" 
+JWT_SECRET_KEY=
+BCRYPT_SALT_ROUNDS=
+SESSION_NAME =
+SESSION_SECRET=
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PORT=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
 
 
-GRACEFUL_SHUTDOWN_TIMEOUT=60000
-SESSION_MAX_AGE=6000000
+GRACEFUL_SHUTDOWN_TIMEOUT=
+SESSION_MAX_AGE=
 
-NODE_ENV=development
+NODE_ENV=
