[#102] 스웨거 수정하기 및 summary 부분 삭제

--- a/expense-tracker/.env
+++ b/expense-tracker/.env
@@ -1,22 +1,23 @@
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
-DB_HOST=
-DB_DIALECT=
-DB_PORT=
+DB_USERNAME=postgres.ouxfsaeoqebyybxythuz
+DB_PASSWORD=EagZZ/XhqR%n7fa
+DB_DATABASE=postgres
+DB_HOST=aws-1-ap-northeast-2.pooler.supabase.com
+DB_DIALECT=postgres
+DB_PORT=5432 
 
-JWT_SECRET_KEY=
-BCRYPT_SALT_ROUNDS=
-SESSION_NAME =
-SESSION_SECRET=
+JWT_SECRET_KEY="jihwanproject" 
+BCRYPT_SALT_ROUNDS=10
+SESSION_NAME = "sssssssssid"
+SESSION_SECRET="jihwanseesion" 
 
-REDIS_HOST=
-REDIS_PORT=
-REDIS_USERNAME=
-REDIS_PASSWORD=
+REDIS_HOST="redis-16166.c289.us-west-1-2.ec2.cloud.redislabs.com"
+REDIS_PORT="16166"
+REDIS_USERNAME="system"
+REDIS_PASSWORD="Rlawlghks12!"
 
+GRACEFUL_SHUTDOWN_TIMEOUT=60000
+SESSION_MAX_AGE=6000000
 
-GRACEFUL_SHUTDOWN_TIMEOUT=
-SESSION_MAX_AGE=
+NODE_ENV=development
 
-NODE_ENV=
+WEATHER_API_KEY=
