--- a/expense-tracker/swagger/paths/users/users.yaml
+++ b/expense-tracker/swagger/paths/users/users.yaml
@@ -1,6 +1,6 @@
 get:
   tags: [Users]
-  summary: 모든 사용자 목록 조회 (관리자 전용)
+  summary: 모든 사용자 목록 조회 (관리자만)
   description: 관리자만 모든 사용자의 목록을 조회할 수 있습니다. 닉네임 또는 이메일로 검색할 수 있습니다.
   security:
     - cookieAuth: []
@@ -24,25 +24,63 @@ get:
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '../../components/schema.yaml#/schemas/User'
+            type: object
+            properties:
+              usersPayload:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    nickname:
+                      type: string
+                      example: "admin_user"
+                    contactEmail:
+                      type: string
+                      format: email
+                      example: "admin@example.com"
+                    profileImageUrl:
+                      type: [string, 'null']
+                      nullable: true
+                      example: null
+                    gender:
+                      type: string
+                      enum: ["male", "female"]
+                      example: "male"
+                    birthday:
+                      type: string
+                      format: date
+                      example: "1990-01-01"
+                    level:
+                      type: integer
+                      example: 10
+                    exp:
+                      type: integer
+                      example: 1500
+                    role:
+                      type: string
+                      enum: ["user", "admin"]
+                      example: "admin"
+              totalItems:
+                type: integer
+                example: 2
           example:
-            - nickname: "admin_user"
-              contactEmail: "admin@example.com"
-              profileImageUrl: null
-              gender: "male"
-              birthday: "1990-01-01"
-              level: 10
-              exp: 1500
-              role: "admin"
-            - nickname: "test_user_1"
-              contactEmail: "user1@example.com"
-              profileImageUrl: null
-              gender: "female"
-              birthday: "1995-05-10"
-              level: 5
-              exp: 750
-              role: "user"
+            usersPayload:
+              - nickname: "admin_user"
+                contactEmail: "admin@example.com"
+                profileImageUrl: null
+                gender: "male"
+                birthday: "1990-01-01"
+                level: 10
+                exp: 1500
+                role: "admin"
+              - nickname: "test_user_1"
+                contactEmail: "user1@example.com"
+                profileImageUrl: null
+                gender: "female"
+                birthday: "1995-05-10"
+                level: 5
+                exp: 750
+                role: "user"
+            totalItems: 2
     '403':
       description: 권한 없음
