--- a/expense-tracker/swagger/paths/challenges/challenge-by-id.yaml
+++ b/expense-tracker/swagger/paths/challenges/challenge-by-id.yaml
@@ -14,14 +14,17 @@ get:
             $ref: '../../components/schema.yaml#/schemas/Challenge'
           example:
             challengeId: 1
-            title: "일주일 지출 10회 미만"
-            description: "일주일 동안 지출 횟수를 10회 미만으로 유지하여 절약 습관을 길러보세요."
+            title: '일주일 지출 10회 미만'
+            description: '일주일 동안 지출 횟수를 10회 미만으로 유지하여 절약 습관을 길러보세요.'
             rewardXp: 100
-            challengeStartDate: "2025-11-10"
-            challengeExpireDate: "2025-11-17"
+            challengeStartDate: '2025-11-10'
+            challengeExpireDate: '2025-11-17'
             limitDay: 7
-    '404':
-      description: 챌린지를 찾을 수 없음
+            createdAt: '2025-11-09T10:00:00Z'
+            updatedAt: '2025-11-09T10:00:00Z'
+            deletedAt: null
+        '404':
+          description: 챌린지를 찾을 수 없음
 
 patch:
   tags: [Challenges]
@@ -45,9 +48,16 @@ patch:
             $ref: '../../components/schema.yaml#/schemas/Challenge'
           example:
             challengeId: 1
-            title: "일주일 지출 5회 미만으로 변경"
-            description: "일주일 동안 지출 횟수를 5회 미만으로 유지하여 절약 습관을 길러보세요."
+            title: '일주일 지출 5회 미만으로 변경'
+            description: '일주일 동안 지출 횟수를 5회 미만으로 유지하여 절약 습관을 길러보세요.'
             rewardXp: 150
-            challengeStartDate: "2025-11-10"
-            challengeExpireDate: "2025-11-17"
+            challengeStartDate: '2025-11-10'
+            challengeExpireDate: '2025-11-17'
             limitDay: 7
+            createdAt: '2025-11-09T10:00:00Z'
+            updatedAt: '2025-11-10T10:00:00Z'
+            deletedAt: null
+        '403':
+          description: 권한 없음
+        '404':
+          description: 도전과제를 찾을 수 없음
