--- a/expense-tracker/swagger/paths/expenses/expense-by-id.yaml
+++ b/expense-tracker/swagger/paths/expenses/expense-by-id.yaml
@@ -1,29 +1,99 @@
+get:
+  tags: [Expenses]
+  summary: 특정 지출 내역 조회
+  description: 특정 지출 내역을 ID로 조회합니다.
+  security:
+    - cookieAuth: []
+  parameters:
+    - $ref: '../../components/parameter.yaml#/parameters/ExpenseId'
+  responses:
+    '200':
+      description: 지출 내역 조회 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/Expense'
+          example:
+            expenseId: 1
+            userId: 1
+            financialYearId: 1
+            date: '2025-08-11'
+            amount: 600000
+            category: 'LEISURE'
+            paymentMethod: 'CREDIT_CARD'
+            status: 'APPROVED'
+            description: '티켓 예매'
+            createdAt: '2025-08-11T10:00:00Z'
+            updatedAt: '2025-08-11T10:00:00Z'
+            deletedAt: null
+    '400':
+      description: 잘못된 요청
+    '403':
+      description: 권한 없음
+    '404':
+      description: 지출 내역을 찾을 수 없음
+
 patch:
   tags: [Expenses]
-  summary: 지출 내역 수정
+  summary: 특정 지출 내역 수정
+  description: 특정 지출 내역을 ID로 수정합니다.
   security:
     - cookieAuth: []
   parameters:
     - $ref: '../../components/parameter.yaml#/parameters/ExpenseId'
   requestBody:
+    required: true
     content:
       application/json:
         schema:
           $ref: '../../components/schema.yaml#/schemas/ExpenseRequest'
   responses:
     '200':
-      description: 수정 성공
+      description: 지출 내역 수정 성공
       content:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/Expense'
+          example:
+            expenseId: 1
+            userId: 1
+            financialYearId: 1
+            date: '2025-08-11'
+            amount: 700000
+            category: 'LEISURE'
+            paymentMethod: 'CREDIT_CARD'
+            status: 'APPROVED'
+            description: '영화 관람'
+            createdAt: '2025-08-11T10:00:00Z'
+            updatedAt: '2025-08-11T11:30:00Z'
+            deletedAt: null
+    '400':
+      description: 잘못된 요청
+    '403':
+      description: 권한 없음
+    '404':
+      description: 지출 내역을 찾을 수 없음
+
 delete:
   tags: [Expenses]
-  summary: 지출 내역 삭제
+  summary: 특정 지출 내역 삭제
+  description: 특정 지출 내역을 ID로 삭제합니다.
   security:
     - cookieAuth: []
   parameters:
     - $ref: '../../components/parameter.yaml#/parameters/ExpenseId'
   responses:
-    '204':
-      description: 삭제 성공
+    '200':
+      description: 지출 내역 삭제 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/MessageResponse'
+          example:
+            message: "지출 내역이 성공적으로 삭제되었습니다."
+    '400':
+      description: 잘못된 요청
+    '403':
+      description: 권한 없음
+    '404':
+      description: 지출 내역을 찾을 수 없음
