--- a/expense-tracker/swagger/paths/expenses/expense.yaml
+++ b/expense-tracker/swagger/paths/expenses/expense.yaml
@@ -1,23 +1,94 @@
 get:
   tags: [Expenses]
-  summary: 지출 내역 조회
+  summary: 지출 내역 목록 조회
+  description: 특정 사용자의 지출 내역 목록을 조회합니다. 연도와 월별로 필터링할 수 있습니다.
   security:
     - cookieAuth: []
   parameters:
-    - $ref: '../../components/parameter.yaml#/parameters/Year'
-    - $ref: '../../components/parameter.yaml#/parameters/Month'
+    - name: userId
+      in: query
+      required: true
+      description: "조회할 사용자의 ID"
+      schema:
+        type: integer
+    - name: year
+      in: query
+      required: false
+      description: "조회할 지출의 연도 (yyyy)"
+      schema:
+        type: integer
+        example: 2025
+    - name: month
+      in: query
+      required: false
+      description: "조회할 지출의 월 (1-12)"
+      schema:
+        type: integer
+        example: 8
+    - name: page
+      in: query
+      required: false
+      description: "페이지 번호 (기본값: 1)"
+      schema:
+        type: integer
+        example: 1
+    - name: limit
+      in: query
+      required: false
+      description: "한 페이지당 항목 수 (기본값: 10)"
+      schema:
+        type: integer
+        example: 10
   responses:
     '200':
-      description: 조회 성공
+      description: 지출 내역 목록 조회 성공
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '../../components/schema.yaml#/schemas/Expense'
+            type: object
+            properties:
+              totalCount:
+                type: integer
+                example: 2
+              expenses:
+                type: array
+                items:
+                  $ref: '../../components/schema.yaml#/schemas/Expense'
+          example:
+            totalCount: 2
+            expenses:
+              - expenseId: 1
+                userId: 1
+                financialYearId: 1
+                date: '2025-08-11'
+                amount: 600000
+                category: 'LEISURE'
+                paymentMethod: 'CREDIT_CARD'
+                status: 'APPROVED'
+                description: '티켓 예매'
+                createdAt: '2025-08-11T10:00:00Z'
+                updatedAt: '2025-08-11T10:00:00Z'
+                deletedAt: null
+              - expenseId: 2
+                userId: 1
+                financialYearId: 1
+                date: '2025-08-12'
+                amount: 50000
+                category: 'LIVING_EXPENSES'
+                paymentMethod: 'CASH'
+                status: 'APPROVED'
+                description: '점심 식사'
+                createdAt: '2025-08-12T11:00:00Z'
+                updatedAt: '2025-08-12T11:00:00Z'
+                deletedAt: null
+        '400':
+          description: 잘못된 요청
+        '403':
+          description: 권한 없음
 post:
   tags: [Expenses]
-  summary: 지출 내역 추가
+  summary: 지출 내역 생성
+  description: 새로운 지출 내역을 생성합니다.
   security:
     - cookieAuth: []
   requestBody:
@@ -28,8 +99,25 @@ post:
           $ref: '../../components/schema.yaml#/schemas/ExpenseRequest'
   responses:
     '201':
-      description: 지출 내역 추가 성공
+      description: 지출 내역 생성 성공
       content:
         application/json:
           schema:
-            $ref: '../../components/schema.yaml#/schemas/Expense'
+            $ref: '../../components/schema.yaml#/schemas/Expense' # 수정된 Expense 스키마 참조
+          example:
+            expenseId: 1
+            userId: 1
+            financialYearId: 1
+            date: '2025-08-11'
+            amount: 600000
+            category: 'LEISURE'
+            paymentMethod: 'CREDIT_CARD'
+            status: 'APPROVED'
+            description: '티켓 예매'
+            createdAt: '2025-08-11T10:00:00Z'
+            updatedAt: '2025-08-11T10:00:00Z'
+            deletedAt: null
+    '400':
+      description: 잘못된 요청
+    '401':
+      description: 인증되지 않은 사용자
