--- a/expense-tracker/swagger/paths/incomes/income-by-id.yaml
+++ b/expense-tracker/swagger/paths/incomes/income-by-id.yaml
@@ -1,29 +1,97 @@
+get:
+  tags: [Incomes]
+  summary: 특정 수입 내역 조회
+  description: 특정 수입 내역을 ID로 조회합니다.
+  security:
+    - cookieAuth: []
+  parameters:
+    - $ref: '../../components/parameter.yaml#/parameters/IncomeId'
+  responses:
+    '200':
+      description: 수입 내역 조회 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/Income'
+          example:
+            incomeId: 1
+            userId: 1
+            financialYearId: 1
+            date: '2025-08-10'
+            amount: 3000000
+            category: 'SALARY'
+            status: 'APPROVED'
+            description: '8월 급여'
+            createdAt: '2025-08-10T10:00:00Z'
+            updatedAt: '2025-08-10T10:00:00Z'
+            deletedAt: null
+        '400':
+          description: 잘못된 요청
+        '403':
+          description: 권한 없음
+        '404':
+          description: 수입 내역을 찾을 수 없음
+
 patch:
   tags: [Incomes]
-  summary: 수입 내역 수정
+  summary: 특정 수입 내역 수정
+  description: 특정 수입 내역을 ID로 수정합니다.
   security:
     - cookieAuth: []
   parameters:
     - $ref: '../../components/parameter.yaml#/parameters/IncomeId'
   requestBody:
+    required: true
     content:
       application/json:
         schema:
           $ref: '../../components/schema.yaml#/schemas/IncomeRequest'
-  responses:
-    '200':
-      description: 수정 성공
-      content:
-        application/json:
-          schema:
-            $ref: '../../components/schema.yaml#/schemas/Income' 
+      responses:
+        '200':
+          description: 수입 내역 수정 성공
+          content:
+            application/json:
+              schema:
+                $ref: '../../components/schema.yaml#/schemas/Income'
+              example:
+                incomeId: 1
+                userId: 1
+                financialYearId: 1
+                date: '2025-08-10'
+                amount: 3500000
+                category: 'SALARY'
+                status: 'APPROVED'
+                description: '8월 급여 (인센티브 포함)'
+                createdAt: '2025-08-10T10:00:00Z'
+                updatedAt: '2025-08-10T11:30:00Z'
+                deletedAt: null
+        '400':
+          description: 잘못된 요청
+        '403':
+          description: 권한 없음
+        '404':
+          description: 수입 내역을 찾을 수 없음
+
 delete:
   tags: [Incomes]
-  summary: 수입 내역 삭제
+  summary: 특정 수입 내역 삭제
+  description: 특정 수입 내역을 ID로 삭제합니다.
   security:
     - cookieAuth: []
   parameters:
     - $ref: '../../components/parameter.yaml#/parameters/IncomeId'
   responses:
-    '204':
-      description: 삭제 성공
+    '200':
+      description: 수입 내역 삭제 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/MessageResponse'
+          example:
+            message: "수입 내역이 성공적으로 삭제되었습니다."
+        '400':
+          description: 잘못된 요청
+        '403':
+          description: 권한 없음
+        '404':
+          description: 수입 내역을 찾을 수 없음
