--- a/expense-tracker/swagger/paths/incomes/income.yaml
+++ b/expense-tracker/swagger/paths/incomes/income.yaml
@@ -1,20 +1,64 @@
 get:
   tags: [Incomes]
-  summary: 내 수입 내역 조회
+  summary: 수입 내역 조회
+  description: 특정 사용자의 수입 내역을 조회합니다. `userId`는 필수 쿼리 파라미터이며, 관리자는 다른 사용자의 ID로 조회할 수 있습니다. 일반 사용자는 자신의 ID를 지정해야 합니다.
   security:
     - cookieAuth: []
   parameters:
+    - name: userId
+      in: query
+      required: true
+      schema:
+        type: integer
+      description: "조회할 사용자의 ID. 본인 수입만 조회할 경우 본인의 userId를, 관리자는 다른 사용자의 userId를 지정할 수 있습니다."
     - $ref: '../../components/parameter.yaml#/parameters/Year'
     - $ref: '../../components/parameter.yaml#/parameters/Month'
+    - $ref: '../../components/parameter.yaml#/parameters/Page'
+    - $ref: '../../components/parameter.yaml#/parameters/Limit'
   responses:
     '200':
-      description: 조회 성공
+      description: 수입 내역 목록 조회 성공
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '../../components/schema.yaml#/schemas/Income'
+            type: object
+            properties:
+              totalCount:
+                type: integer
+                example: 2
+              incomes:
+                type: array
+                items:
+                  $ref: '../../components/schema.yaml#/schemas/Income' # Income 스키마 참조
+          example:
+            totalCount: 2
+            incomes:
+              - incomeId: 1
+                userId: 1
+                financialYearId: 1
+                date: '2025-08-10'
+                amount: 3000000
+                category: 'SALARY'
+                status: 'APPROVED'
+                description: '8월 급여'
+                createdAt: '2025-08-10T10:00:00Z'
+                updatedAt: '2025-08-10T10:00:00Z'
+                deletedAt: null
+              - incomeId: 2
+                userId: 1
+                financialYearId: 1
+                date: '2025-08-15'
+                amount: 500000
+                category: 'SIDE_INCOME'
+                status: 'SCHEDULED'
+                description: '프리랜서 작업비'
+                createdAt: '2025-08-15T12:00:00Z'
+                updatedAt: '2025-08-15T12:00:00Z'
+                deletedAt: null
+        '400':
+          description: 잘못된 요청
+        '403':
+          description: 권한 없음
 post:
   tags: [Incomes]
   summary: 수입 내역 추가
@@ -32,4 +76,16 @@ post:
       content:
         application/json:
           schema:
-            $ref: '../../components/schema.yaml#/schemas/Income' 
+            $ref: '../../components/schema.yaml#/schemas/Income' # 수정된 Income 스키마 참조
+          example:
+            incomeId: 1
+            userId: 1
+            financialYearId: 1
+            date: '2025-08-10'
+            amount: 3000000
+            category: 'SALARY'
+            status: 'APPROVED'
+            description: '8월 급여'
+            createdAt: '2025-08-10T10:00:00Z'
+            updatedAt: '2025-08-10T10:00:00Z'
+            deletedAt: null
