--- a/expense-tracker/swagger/paths/target-spendings/target-spending-by-id.yaml
+++ b/expense-tracker/swagger/paths/target-spendings/target-spending-by-id.yaml
@@ -1,6 +1,25 @@
+get:
+  tags: [TargetSpendings]
+  summary: 특정 월별 목표 지출 조회
+  description: 본인의 특정 월별 목표 지출을 조회합니다.
+  security:
+    - cookieAuth: []
+  parameters:
+    - $ref: '../../components/parameter.yaml#/parameters/TargetSpendingId'
+  responses:
+    '200':
+      description: 조회 성공
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schema.yaml#/schemas/TargetSpending'
+    '404':
+      description: 목표 지출 내역을 찾을 수 없음
+
 patch:
   tags: [TargetSpendings]
-  summary: 내 월별 목표 지출 수정
+  summary: 월별 목표 지출 수정
+  description: 본인의 월별 목표 지출을 수정합니다.
   security:
     - cookieAuth: []
   parameters:
@@ -18,9 +37,11 @@ patch:
         application/json:
           schema:
             $ref: '../../components/schema.yaml#/schemas/TargetSpending'
+
 delete:
   tags: [TargetSpendings]
   summary: 월별 목표 지출 삭제
+  description: 본인의 월별 목표 지출을 삭제합니다.
   security:
     - cookieAuth: []
   parameters:
