--- a/nest-seed/package.json
+++ b/nest-seed/package.json
@@ -26,7 +26,11 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/express-session": "^1.18.2",
+    "bcrypt": "^6.0.0",
+    "express-session": "^1.18.2",
     "ioredis": "^5.8.2",
+    "paranoid": "^1.0.0-beta2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "redis": "^5.10.0",
@@ -42,6 +46,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
