--- a/nest-seed/package.json
+++ b/nest-seed/package.json
@@ -28,9 +28,10 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/express-session": "^1.18.2",
     "bcrypt": "^6.0.0",
+    "connect-redis": "6",
+    "dotenv": "^17.2.3",
     "express-session": "^1.18.2",
     "ioredis": "^5.8.2",
-    "paranoid": "^1.0.0-beta2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "redis": "^5.10.0",
