--- a/nest-seed/package.json
+++ b/nest-seed/package.json
@@ -37,6 +37,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "pino": "^10.3.0",
     "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
