--- a/expense-tracker/swagger/paths/challenge-checklists/checklists.yaml
+++ b/expense-tracker/swagger/paths/challenge-checklists/checklists.yaml
@@ -20,7 +20,7 @@ get:
                 type: array
                 items:
                   $ref: '../../components/schema.yaml#/schemas/ChallengeChecklist'
-              totalItems:
+              totalCount:
                 type: integer
                 example: 2
           example:
